Fix for napari rendering in movie

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ commit = True
 tag = True
 
 [flake8]
-ignore = E203,E501,W293,E231,W503,C901,W291,E266
+ignore = E203,E501,W293,E231,W503,C901,W291,E266,E721
 max-complexity = 7
 exclude = __init__.py
 
